--- a/Python Sample/fatsever/app/templates/base.html
+++ b/Python Sample/fatsever/app/templates/base.html
@@ -26,11 +26,9 @@
         </header>
         <main>
             {% block content %}
-            <h2>Upload Files</h2>
             <div id="message"></div>
             <form id="uploadForm" action="/api/upload" method="post" enctype="multipart/form-data">
                 <div class="mb-3">
-                    <label for="file" class="form-label">Upload File</label>
                     <input class="form-control" type="file" id="file" name="file" style="display: none;">
                     <div class="drop-zone" id="dropZone">Drag & Drop files here or click to upload</div>
                 </div>
@@ -40,21 +38,21 @@
             <h2>Image Files</h2>
             <ul>
                 {% for file in img_files %}
-                <li>{{ file }}</li>
+                <li><a href="/img/{{ file }}" download>{{ file }}</a></li>
                 {% endfor %}
             </ul>
 
             <h2>Video Files</h2>
             <ul>
                 {% for file in video_files %}
-                <li>{{ file }}</li>
+                <li><a href="/video/{{ file }}" download>{{ file }}</a></li>
                 {% endfor %}
             </ul>
 
             <h2>Other Files</h2>
             <ul>
                 {% for file in other_files %}
-                <li>{{ file }}</li>
+                <li><a href="/files/{{ file }}" download>{{ file }}</a></li>
                 {% endfor %}
             </ul>
             {% endblock %}
