--- a/Python Sample/fatsever/app/static/css/index.css
+++ b/Python Sample/fatsever/app/static/css/index.css
@@ -64,3 +64,6 @@ dialog::backdrop {
   background: #ccc url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="64" width="64" viewBox="0 0 64 64"><path fill="%23ffffff" d="M44 4H20c-3.3 0-6 2.7-6 6v44c0 3.3 2.7 6 6 6h24c3.3 0 6-2.7 6-6V10c0-3.3-2.7-6-6-6zm-2 8v4H22v-4h20z"/></svg>') no-repeat center;
   background-size: 40px 40px;
 }
+.tab-content {
+  scrollbar-gutter: stable;
+}
