--- a/Python Sample/fatsever/app/templates/home.html
+++ b/Python Sample/fatsever/app/templates/home.html
@@ -5,7 +5,7 @@
   {% block content %}
   <div id="message"></div>
       
-  <!-- ytdownloader -->
+  <!-- ytdownloader 表單 -->
   <form id="ytDownloadForm" action="/api/ytdownloader" method="post" enctype="multipart/form-data" class="mb-4">
     <div class="input-group">
       <input type="text" 
@@ -94,12 +94,12 @@
       <div id="otherGrid" class="row row-cols-2 row-cols-sm-3 row-cols-md-4 g-3">
         {% for file in other_files %}
         <div class="col">
-          <div class="file-card" data-file="{{ file }}" data-type="other">
+          <a class="file-card" href="/files/{{ file }}" download data-file="{{ file }}" data-type="other">
             <div class="file-icon"></div>
             <div class="file-card-body">
               <p class="file-card-title">{{ file }}</p>
             </div>
-          </div>
+          </a>
         </div>
         {% endfor %}
       </div>
@@ -119,7 +119,7 @@
       <video id="videoDialogPlayer" controls style="max-width: 100%; max-height: 80vh;"></video>
     </div>
   </dialog>
-
+  
   {% endblock content %}
 </div>
 {% endblock container %}
