--- a/Python Sample/fatsever/app/templates/home.html
+++ b/Python Sample/fatsever/app/templates/home.html
@@ -120,6 +120,9 @@
     </div>
   </dialog>
   
+  <!-- 新增上傳進度提示元素 -->
+  <div id="uploadProgress" style="position: fixed; bottom: 10px; right: 10px; background: rgba(0,0,0,0.7); color: #fff; padding: 5px 10px; border-radius: 5px; z-index: 1000;"></div>
+
   {% endblock content %}
 </div>
 {% endblock container %}
