新增檔案下載功能，改進檔案刪除日誌紀錄，並更新影片播放標籤以支援行動裝置

--- a/Python Sample/fatsever/app/templates/home.html
+++ b/Python Sample/fatsever/app/templates/home.html
@@ -134,7 +134,13 @@
   <!-- 影片播放用 dialog -->
   <dialog id="videoDialog">
     <div class="dialog-content text-center">
-      <video id="videoDialogPlayer" controls style="max-width: 100%; max-height: 80vh;"></video>
+      <video id="videoDialogPlayer" 
+             controls 
+             playsinline 
+             webkit-playsinline
+             style="max-width: 100%; max-height: 80vh;"
+             type="video/mp4">
+      </video>
     </div>
   </dialog>
   
