--- a/Python Sample/fatsever/app/templates/base.html
+++ b/Python Sample/fatsever/app/templates/base.html
@@ -14,7 +14,7 @@
     <div class="nav-wrapper container">
       <a href="/" class="brand-logo">FatAPI Server</a>
       <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <ul id="nav-mobile" class="right">
 
         <li><a href="/">Home</a></li>
         <li><a href="/chat">Chat</a></li>
