feat(chat): support image paste upload

--- a/Python Sample/fatsever/app/templates/chat.html
+++ b/Python Sample/fatsever/app/templates/chat.html
@@ -18,7 +18,7 @@
   </div>
   <div class="row valign-wrapper" style="margin-top:1rem;">
     <div class="input-field col s10">
-      <input id="messageInput" type="text" placeholder="輸入訊息" autocomplete="off" />
+      <input id="messageInput" type="text" placeholder="輸入訊息或貼上圖片" autocomplete="off" />
     </div>
     <div class="col s2 right-align">
       <a id="sendBtn" class="btn waves-effect waves-light">送出</a>
